k8s/gatekeeper/policies/constraints/deny-host-namespace.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyHostNamespace
metadata:
  name: deny-host-namespace
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - falco
