k8s/gatekeeper/policies/constraints/deny-run-as-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyRunAsRoot
metadata:
  name: deny-run-as-root
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - falco
